# logpilot

./: .env.example  logpilot.db  pyproject.toml  run.py
backend/: config.py  main.py  requirements.txt
backend/api/routes/: auth.py  incidents.py  logs.py  subscriptions.py  teams.py
backend/auth/: middleware.py
backend/database/: crud.py  init_db.py  models.py
backend/statistics/: engine.py  models.py
backend/statistics/detectors/: error_spike.py  latency_creep.py  memory_leak.py  pattern_break.py
backend/websocket/: handlers.py  manager.py
cli/: cli.py  pyproject.toml
cli/logpilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/tailer/: reader.py
